# photo_api

./: .gitignore  main.py  pyproject.toml  settings.py
docker/celery/: Dockerfile
photos/app/: .flake8  alembic.ini  config.py  main.py  pyproject.toml
photos/app/alembic/: env.py
photos/app/alembic/versions/: 22e5a36baeda_create_storage_table.py  e903681d9bb6_create_storage_table.py
photos/app/api_v1/: __init__.py
photos/app/api_v1/storage/: dals.py  dependencies.py  services.py  views.py
photos/app/api_v1/storage/schemas/: models.py  validators.py
photos/app/api_v1/storage/services/: manager.py
photos/app/db/: base.py  db.py  models.py
photos/app/db/models/: __init__.py  db.py  storage.py
photos/app/migrations/: env.py
photos/app/migrations/versions/: a934ce2784e7_create_for_storages.py
photos/app/tests/: conftests.py  test_storage_manager.py
