[tool.poetry]
name = "photo-api-photos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "photos"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
envparse = "^0.2.0"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
alembic = "^1.11.2"
psycopg2 = "^2.9.7"
pillow = "^10.0.1"
pydantic-settings = "^2.0.3"
pytest = "^7.4.2"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
